--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/jesuselias/Nodejs-Typescript#readme",
   "dependencies": {
     "@types/express-handlebars": "^3.1.0",
+    "@types/mongoose": "^5.10.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "mongoose": "^5.10.15"
